    for the ``mongocryptd`` process. The queryable encryption shared library requires
    `org.mongodb:mongodb-crypt <https://mvnrepository.com/artifact/org.mongodb/mongodb-crypt>`__
    version ``1.5.1.1`` or later.

- Added a new API for encryption key management.

- Added builder API methods for additional aggregation stages
  including :pipeline:`$search`/:pipeline:`$searchMeta` (Atlas only),
  :pipeline:`$densify`, and :pipeline:`$fill`.

- Added the ``BsonExtraElements`` annotation that can be used with POJO encoding
  and decoding. ``BsonExtraElements`` enables decoding objects that may receive
  new fields in the future without requiring developers to explicitly map
  those new fields.

- Performance optimizations including:

  - Lock-free implementations of the server session pool and the buffer pool.
  - A new cleanup implementation of ``DBCursor`` that uses Java's
    Cleaner API instead of finalization, available in Java 9 or later.

- The :ref:`setWindowFields <builders-aggregates-setWindowFields>` builder API
  is no longer a beta feature. Changes in the API break both binary and source
  compatibility. See :ref:`<java-breaking-changes-v4.7>` for more information.

.. _version-4.6:

What's New in 4.6
-----------------

New features of the 4.6 Java driver release include:

- The buffer pool is now shared across all ``MongoClient`` instances. The
  buffer pool prunes buffers that have been idle for one minute.
- Added an API to specify suppliers for AWS KMS credentials for
  Client-Side Field Level Encryption (CSFLE). See the
  `AutoEncryptionSettings.Builder.kmsProviderPropertySuppliers() <https://mongodb.github.io/mongo-java-driver/4.6/apidocs/mongodb-driver-core/com/mongodb/AutoEncryptionSettings.Builder.html#kmsProviderPropertySuppliers(java.util.Map)>`__